--- a/Website/Basics/index.html
+++ b/Website/Basics/index.html
@@ -1,2 +1,19 @@
-<html>
+<html> 
+<head>
+<title>Basics of HTML</title>
+</head>
+<body>
+<h1>Hello World!</h1>
+<h2>French fries are healthy.</h2>
+<h3>I palačinke isto!</h3>
+<h4>Сарма је закон!</h4>
+<h5>И руска салата 😋</h5>
+<h6>Uz Nikšićko tamno!</h6>
+</br>
+<tt>Funfact: My Grandpa used typewriter to write 3 books about our family history.</tt> </br>
+<strong>This text should be bold.</strong> </br>
+<em>And I hope this one will be italicized.</em> </br>
+</br>
+<a href="https://www.facebook.com/miljana.stamenic">Click here to be redirected to my Facebook!</a>
+</body>
 </html>
